# playground

./: .gitignore  Async.hs  GADT.java  Helix.hs  LICENSE  NamelessLam.hs  README.md  Unit.cpp  Unit.hpp  calc.c  flake.nix  minesweeper.hs  semanal.ml  sort.cpp  swapview.c
bomaker/: bomaker.hs  bomaker.ml
bospider/: build.sbt
circuit-idris2/: Main.idr  circuit.ipkg
cppcoro/: coro.cpp  generator.cpp  monad-optional.cpp
eli/: callable.c  callable.h  cfn.c  cfn.h  cons.c  cons.h  env.c  env.h  number.c  number.h  scanner.c  scanner.h  value.c  value.h
fs/: myfilesystem.c  myfilesystem.h  myfuse.c
gobang/: LICENSE  README.md  gobang.cabal  index.html  visgo.cabal
gobot/: Cargo.toml  flake.nix
haxd/: CHANGELOG.md  README.md  default.nix  flake.nix  haxd.cabal
henwuliaobot/: package-lock.json  package.json  wrangler.toml
invest/: CHANGELOG.md  getdata.hs  invest.cabal  invest.hs  market.db  out.txt  shell.nix
invest/app/: GetData.hs  Invest.hs  Main.hs
lambda/: eager.hs  lazy.hs
landcraft/: Action.scala  Map.scala  Render.scala  Simulator.scala  Team.scala  Unit.scala
landcraft-old/: model.scala  network.scala  server.scala  test.scala  ui.scala  util.scala
landcraftbot/: importdata.mjs  package-lock.json  package.json  schema.sql  wrangler.toml
learn/: learn.cabal
lookbookbook/: package-lock.json  package.json  schema.sql  wrangler.toml
neoiter/: neoiter.cpp
nixstd/: Applicative.nix  Contract.nix  Either.nix  Function.nix  Functor.nix  Maybe.nix  Monoid.nix  Parsec.nix  Reader.nix  Semigroup.nix  Tuple.nix  Writer.nix  default.nix  modules.nix  test.nix
particle/: README.md  particle.cabal  stack.yaml
particle/src/: Main.hs
pie/: equality.pie  naturals.pie  test.pie
render/: Cargo.toml  Makefile
resub/: package-lock.json  package.json  (+1 more)
(+69 files in other folders)
