cabal-version:      2.4
name:               invest
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nick
maintainer:         znhihgiasy@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable invest
    main-is:          Main.hs

    other-modules: Invest, GetData

    build-depends:    base ^>=4.14.1.0
                    , sqlite-simple
                    , http-conduit
                    , lens
                    , lens-aeson
                    , aeson
                    , text
                    , containers
                    , directory
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: TupleSections, OverloadedStrings, BlockArguments
