cabal-version: >=1.10
name: particle
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: reserved
maintainer: znhihgiasy@gmail.com
author: Nick Ballard
homepage: https://github.com/nicball/landcraft#readme
category: hobby
build-type: Simple
extra-source-files:
    README.md

executable particle
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: QuasiQuotes BlockArguments
    build-depends: base >=4.7 && <5
                 , assert -any
                 , GLFW-b -any
                 , OpenGL -any
                 , OpenGLRaw -any
                 , raw-strings-qq -any
                 , StateVar -any
